@@ -1,0 +1,12 @@
+<?php
+/** Sorani (Soranî / کوردی)
+ *
+ * See MessagesQqq.php for message documentation incl. usage of parameters
+ * To improve a translation please visit http://translatewiki.net
+ *
+ * @ingroup Language
+ * @file
+ *
+ */
+
+$fallback = 'ckb-arab';
